src/sass_modules/music.scss
.music {
  .content {
    padding: 3% 0 4%;
    .title {
      font-weight: bold;
      font-size: 24px;
    }
    max-width: 1000px;
    width: 100%;
    margin: 0 auto;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    .mixtape {
      @media screen and (max-width: 1000px) {
        display: none;
      }
    }

    .artists {
      display: flex;
      flex-wrap: wrap;
      max-width: 500px;
      margin-bottom: 15px;
      justify-content: center;
      @media screen and(max-width: 1000px) {
        max-width: none;
      }
      .artist {
        cursor: pointer;
        display: flex;
        max-width: 250px;
        width: 100%;
        position: relative;
        max-height: 200px;
        height: 100%;
        &:hover {
          .text {
            opacity: 1;
          }
        }
        .cover {
          width: 100%;
          max-height: 250px;
          overflow: hidden;
          object-fit: cover;
          object-position: 50% 50%;
        }
        .text {
          text-transform: uppercase;
          transition: all 0.2s;
          display: flex;
          opacity: 0;
          position: absolute;
          top: 0;
          width: 100%;
          height: 100%;
          padding: 15px;
          // text-align: center;
          color: #fff;
          background: rgba($color: #000000, $alpha: 0.4);
          // display: flex;
          justify-content: center;
          align-items: center;
          flex-direction: column;
          font-size: 14px;
          h2 {
            font-size: 18px;
            font-weight: bold;
          }
        }
      }
    }
  }
}

